--- a/app.html
+++ b/app.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Game</title>
+    <title>Tichu Counter</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 
@@ -12,25 +12,25 @@
 <body>
     <div class="container">
         <h1>Tichu Counter</h1>
-        <div class="row my-5">
+        <div class="row my-1">
             <!---omada 1 score-->
               <div class="col-6"> 
                 <span class="teams">Team A</span>
-                <div class="row my-3">
+                <div class="row my-2">
                     <span  class="fscores" id="resultA">0</span>
                     <span id="details1"></span>
-                    <input type="number" class=" text-center my-5" id="addscoreA">
+                    <input type="number" class=" text-center my-4" id="addscoreA">
                   </div>
-                  <div class="row my-2 justify-content-center">
+                  <div class="row my-5 justify-content-center">
                     <button class="btn-danger btn-sm tichu" id="tichuA">Tichu</button>
                     <div class="row justify-content-center m-1">
                     <button class="btn-danger btn-sm grand" id="grandA">Grand</button>
                     </div>
                     <div class="row justify-content-center">
-                    <button class="btn-danger btn-sm tichu" id="-tichuA">-Tichu</button>
+                    <button class="btn-danger btn-sm tichu" id="tichuFailA">-Tichu</button>
                     </div>
                     <div class="row justify-content-center m-1">
-                    <button class="btn-danger btn-sm grand" id="-grandA">-Grand</button>
+                    <button class="btn-danger btn-sm grand" id="grandFailA">-Grand</button>
                     </div>
                     </div>
               </div>
@@ -38,29 +38,29 @@
             <!----Team B---->
                <div class="col-6">
                  <span class="teams">Team B </span>
-                 <div class="row my-3">
+                 <div class="row my-2">
                      <span class="fscores" id="resultB">0</span>
                      <span id="details2"></span>
-                     <input type="number" class="text-center my-5" id="addscoreB">
+                     <input type="number" class="text-center my-4" id="addscoreB">
                     </div>
 
-                      <div class="row my-2 justify-content-center">
-                      <button class="btn-danger btn-sm tichu" id="tichu">Tichu</button>
+                      <div class="row my-5 justify-content-center">
+                      <button class="btn-danger btn-sm tichu" id="tichuB">Tichu</button>
                       <div class="row justify-content-center m-1">
-                      <button class="btn-danger btn-sm grand" id="grand">Grand</button>
+                      <button class="btn-danger btn-sm grand" id="grandB">Grand</button>
                       </div>
                       <div class="row justify-content-center">
-                      <button class="btn-danger btn-sm tichu" id="-tichu">-Tichu</button>
+                      <button class="btn-danger btn-sm tichu" id="tichuFailB">-Tichu</button>
                       </div>
                       <div class="row justify-content-center m-1">
-                      <button class="btn-danger btn-sm grand" id="-grand">-Grand</button>
+                      <button class="btn-danger btn-sm grand" id="grandFailB">-Grand</button>
                       </div>
 
                       </div>
                      </div>
                
-               <button class="btn my-2" id="submitscore">Submit</button>
-               <button class="btn my-2" id="resetscore">Reset</button>
+               <button class="btn scorebtn" id="submitscore">Submit</button>
+               <button class="btn scorebtn" id="resetscore">Reset</button>
 
 
 
